# bug_tracker_mp3

./: .gitignore  README.md  app.py  build.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg
static/css/: style.css
static/js/: script.js
templates/: base.html  change_pass.html  create_project.html  create_ticket.html  dashboard.html  documentation.html  edit_ticket.html  edit_user.html  home.html  login.html  manage_user.html  project_archive_conf.html  project_delete_conf.html  register.html  users.html
