[project]
name = "bug-tracker-mp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid>=3.3.11",
    "certifi>=2025.7.14",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "dnspython>=2.7.0",
    "flask>=3.1.1",
    "flask-pymongo>=3.0.1",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "isort>=6.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "lazy-object-proxy>=1.11.0",
    "markupsafe>=3.0.2",
    "mccabe>=0.7.0",
    "pylint>=3.3.7",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
    "six>=1.17.0",
    "toml>=0.10.2",
    "urllib3>=2.5.0",
    "werkzeug>=3.1.3",
    "wrapt>=1.17.2",
]
